About me page created.  Need to update text.

--- a/index.html
+++ b/index.html
@@ -7,38 +7,76 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/3198c9fa56.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Dylan Thomas</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/thomasdylan" target="_blank">Github</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank">LinkedIn</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Dylan Thomas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav nav-right">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/thomasdylan" target="_blank"><i
+                            class="fab fa-github fa-lg"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank"><i
+                            class="fab fa-linkedin fa-lg"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <div class="container col-8 mt-2 mb-6">
+        <div class="jumbotron jumbotron-fluid mb-0">
+            <div class="container">
+                <img src="assets/images/profile-picture.png" alt="Profile Picture">
+                <h1 class="display-4">Dylan Thomas</h1>
+                <p class="lead">Current student of the University of Utah coding bootcamp</p>
+            </div>
+        </div>
+
+        <div class="row col-12 m-auto">
+            <div class="col ml-2 pl-0">
+                <h1>About Me</h1>
+                <p>My name is Dylan Thomas, I am 26 years old and from Salt Lake City, Utah. I started teaching myself
+                    how to code shortly after high school and enjoyed it so much I enrolled in the coding bootcamp
+                    through the University of Utah in 2019. I am the youngest child of three boys. I have a 7 year old
+                    white labrador name Casper who still acts like a puppy.</p>
+                <p>Outside of coding some of my hobbies include snowboarding in the winter season, golfing and
+                    playing guitar. I have played guitar for more than 15 years and enjoy playing and creating
+                    different types music with others. If I'm not in class you will most likely find me on the side
+                    of a mountain this winter catching up on all the snowboarding I missed last year due to injury.
+                </p>
+                <p>I look forward to starting this course and growing my coding abilities both personally and
+                    professionally!</p>
+            </div>
+            <div class="col pl-5 pr-0">
+                <h1>Contact</h1>
+                <p><a href="mailto: thomasdylan76@gmail.com"><i class="far fa-envelope"></i> Email</a></p>
+                <p><a href="https://github.com/thomasdylan"><i class="fab fa-github fa-lg"></i> Github</a></p>
+                <p><a href="https://www.linkedin.com/in/dylan-thomas-39153b188/"><i class="fab fa-linkedin fa-lg"></i> LinkedIn</a></p>
+                <p><a href="assets/files/Resume.pdf"><i class="far fa-file"></i> Resume</a>
+                </p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
