lorem ipsum to replace trash.

--- a/index.html
+++ b/index.html
@@ -55,17 +55,7 @@
         <div class="row col-12 m-auto">
             <div class="col ml-2 pl-0">
                 <h1>About Me</h1>
-                <p>My name is Dylan Thomas, I am 26 years old and from Salt Lake City, Utah. I started teaching myself
-                    how to code shortly after high school and enjoyed it so much I enrolled in the coding bootcamp
-                    through the University of Utah in 2019. I am the youngest child of three boys. I have a 7 year old
-                    white labrador name Casper who still acts like a puppy.</p>
-                <p>Outside of coding some of my hobbies include snowboarding in the winter season, golfing and
-                    playing guitar. I have played guitar for more than 15 years and enjoy playing and creating
-                    different types music with others. If I'm not in class you will most likely find me on the side
-                    of a mountain this winter catching up on all the snowboarding I missed last year due to injury.
-                </p>
-                <p>I look forward to starting this course and growing my coding abilities both personally and
-                    professionally!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae sed repudiandae rerum quaerat voluptas est, aliquid cupiditate ex dolorem totam maxime mollitia tempore. Debitis qui dolores voluptates ipsa voluptate soluta.</p>
             </div>
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
