--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container col-8 mt-2 mb-6">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <img src="assets/images/profile-picture.png" alt="Profile Picture">
+                <a href="index.html"><img src="assets/images/profile-picture.png" alt="Profile Picture"></a>
                 <h1 class="display-4">Dylan Thomas</h1>
                 <p class="lead">Current student of the University of Utah coding bootcamp</p>
             </div>
