Added projects to site.  Links all open in different tabs now.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container col-8 mt-2 mb-6">
         <div class="jumbotron jumbotron-fluid mb-0">
             <div class="container">
-                <a href="index.html"><img src="assets/images/profile-picture.png" alt="Profile Picture"></a>
+                <a href="index.html"><img class="profile-image" src="assets/images/profile-picture.png" alt="Profile Picture"></a>
                 <h1 class="display-4">Dylan Thomas</h1>
                 <p class="lead">Current student of the University of Utah coding bootcamp</p>
             </div>
@@ -60,9 +60,11 @@
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
                 <p><a href="mailto: thomasdylan76@gmail.com"><i class="far fa-envelope"></i> Email</a></p>
-                <p><a href="https://github.com/thomasdylan"><i class="fab fa-github fa-lg"></i> Github</a></p>
-                <p><a href="https://www.linkedin.com/in/dylan-thomas-39153b188/"><i class="fab fa-linkedin fa-lg"></i> LinkedIn</a></p>
-                <p><a href="assets/files/Resume.pdf"><i class="far fa-file"></i> Resume</a>
+                <p><a href="https://github.com/thomasdylan" target="_blank"><i class="fab fa-github fa-lg"></i>
+                        Github</a></p>
+                <p><a href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank"><i
+                            class="fab fa-linkedin fa-lg"></i> LinkedIn</a></p>
+                <p><a href="assets/files/Resume.pdf" target="_blank"><i class="far fa-file"></i> Resume</a>
                 </p>
             </div>
         </div>
