--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,50 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container col-10 mt-2 mb-6">
+        <div class="row card-row col-12">
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/urban-reader.png" class="card-img-top" alt="Urban Reader">
+                <div class="card-body">
+                    <h5 class="card-title">Urban Reader</h5>
+                    <p class="card-text">Search terms from urban dictionary. Click on the definition to have it read to
+                        you. User discretion is advised. You can also drag clippy around the page. Double click him to
+                        make a random animation play.</p>
+                    <div class="button-row row">
+                        <a href="https://thomasdylan.github.io/T2S-Urban-Dict/" target="_blank" class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/T2S-Urban-Dict" target="_blank" class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
 
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/trivia.png" class="card-img-top" alt="Trivia Game">
+                <div class="card-body">
+                    <h5 class="card-title">Letterkenny Trivia Game</h5>
+                    <p class="card-text">Answer questions based around the show Letterkenny.  Act quick you only have 10 seconds to answer each question!</p>
+                    <div class="button-row row">
+                        <a href="https://thomasdylan.github.io/TriviaGame/" target="_blank"
+                            class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/TriviaGame" target="_blank"
+                            class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/gifTastic.png" class="card-img-top" alt="gifTastic">
+                <div class="card-body">
+                    <h5 class="card-title">gifTastic</h5>
+                    <p class="card-text">Click the button to find gifs of the topic.  Add your own buttons to the top to search for what you want to see.  Uses the giphy API to retrieve gifs.</p>
+                    <div class="button-row row">
+                        <a href="https://thomasdylan.github.io/gifTastic/" target="_blank"
+                            class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/gifTastic" target="_blank"
+                            class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
