Updated 'About Me'

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row col-12 m-auto">
             <div class="col ml-2 pl-0">
                 <h1>About Me</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae sed repudiandae rerum quaerat voluptas est, aliquid cupiditate ex dolorem totam maxime mollitia tempore. Debitis qui dolores voluptates ipsa voluptate soluta.</p>
+                <p>My name is Dylan Thomas.  I'm a 26 year old web development student from Salt Lake City, Utah.  I am currently enrolled in the University of Utah coding boot camp and I'm set to graduate in February 2020.</p>
             </div>
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
