Added callable phone number.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
                 <p><a href="mailto: thomasdylan76@gmail.com"><i class="far fa-envelope"></i> Email</a></p>
+                <p><a href="tel:801-891-7276"><i class="fas fa-phone"></i> 801-891-7276</a></p>
                 <p><a href="https://github.com/thomasdylan" target="_blank"><i class="fab fa-github fa-lg"></i>
                         Github</a></p>
                 <p><a href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank"><i
