Added new project.

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dylan Thomas Portfolio</title>
+    <title>Dylan Thomas Projects</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -42,6 +42,8 @@
             </ul>
         </div>
     </nav>
+
+    <!--All image sizes are 286px x 180px -->
 
     <div class="container col-10 mt-2 mb-6">
         <div class="row card-row col-12">
@@ -83,6 +85,18 @@
                             class="btn btn-primary">Site</a>
                         <a href="https://github.com/thomasdylan/gifTastic" target="_blank"
                             class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/bamazon.png" class="card-img-top" alt="bamazon">
+                <div class="card-body">
+                    <h5 class="card-title">bamazon</h5>
+                    <p class="card-text">bamaon is a CLI application built using Node.js and MySQL.  It allows user to buy products as well as manager items, inventory and price.</p>
+                    <div class="button-row row">
+                        <a href="https://github.com/thomasdylan/bamazon/blob/master/README.md" target="_blank" class="btn btn-primary">Read Me</a>
+                        <a href="https://github.com/thomasdylan/bamazon" target="_blank" class="btn btn-primary">Code</a>
                     </div>
                 </div>
             </div>
