--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/burger.png" class="card-img-top" alt="Eat-A-Burger">
+                <div class="card-body">
+                    <h5 class="card-title">Eat-A-Burger</h5>
+                    <p class="card-text">A live application that allows users to add a burger to the database.
+                        Users can click the devour button to add that burger to the devoured list. Uses mysql and
+                        express.js.
+                    </p>
+                    <div class="button-row row">
+                        <a href="https://mighty-meadow-50574.herokuapp.com/" target="_blank"
+                            class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/burger" target="_blank" class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
