Updated about me and added flush to projects.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
         <div class="row col-12 m-auto">
             <div class="col ml-2 pl-0">
                 <h1>About Me</h1>
-                <p>My name is Dylan Thomas.  I'm a 26 year old web development student from Salt Lake City, Utah.  I am currently enrolled in the University of Utah coding boot camp and I'm set to graduate in February 2020.</p>
+                <p>Full Stack developer with a passion to create applications that are useful for people in everyday
+                    life. Recently graduated with a certificate in Full Stack Web Development from the University of
+                    Utah and proficient in Javascript, Node.js, React, MySQL, HTML, CSS and more. Looking to join a team
+                    where I can have a positive impact while learning new skills and continuing to develop the skills I
+                    already have. I have experience working with a team to develop apps that focus on UX with a personal
+                    focus on backend development and user authentication with JWT, passport and express sessions. With
+                    experience developing applications and an educational foundation from the University of Utah I will
+                    be a great asset as a full stack developer in this fast growing and exciting field.</p>
             </div>
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
