--- a/projects.html
+++ b/projects.html
@@ -52,11 +52,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Flush</h5>
                     <p class="card-text">Flush is a user based application that allows user to post and find public restrooms based off of ratings.
-                        The idea behind flush is to help users in need know which restrooms to avoid and which ones are sutable for their private needs 
-                        with a social and sometimes hilarious user experience.
-                        This application was built as a team of four during a coding bootcamp at the University of Utah.  The application uses node.js with express,
-                        MySQL for the database, handlebars to display pages built with HTML and bootstrap, passport and express sessions for user authentication with 
-                        bcrypt for password encryption.
+                        The idea behind flush is to help users in need know which restrooms to avoid and which ones are sutable for their private needs.
                     </p>
                     <div class="button-row row">
                         <a href="https://flush2019.herokuapp.com/" target="_blank"
