Added hard times scraper to portfolio.

--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,30 @@
     <div class="container col-10 mt-2 mb-6">
         <div class="row card-row col-12">
             <div class="card" style="width: 18rem;">
+                <img src="assets/images/hardTimeScraper.png" class="card-img-top" alt="Hard Times">
+                <div class="card-body">
+                    <h5 class="card-title">Hard Times News Scraper</h5>
+                    <p class="card-text">
+                    The Hard Times News Scraper pulls articles from the satire news site The Hard Times.
+                    Users can click on an article and add or delete comments.
+                    Built with: 
+                    <ul>
+                        <li>express</li>
+                        <li>express-handlebars</li>
+                        <li>mongoose</li>
+                        <li>mongoDB</li>
+                        <li>cheerio</li>
+                        <li>axios</li>
+                    </ul>
+                    </p>
+                    <div class="button-row row">
+                        <a href="https://hardtimesscraper.herokuapp.com/" target="_blank" class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/MongoScraper" target="_blank" class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
                 <img src="assets/images/flush.png" class="card-img-top" alt="Flush">
                 <div class="card-body">
                     <h5 class="card-title">Flush</h5>
