Added Clicky Game to projects

--- a/projects.html
+++ b/projects.html
@@ -88,6 +88,22 @@
             </div>
 
             <div class="card" style="width: 18rem;">
+                <img src="assets/images/clicky.png" class="card-img-top" alt="Clicky">
+                <div class="card-body">
+                    <h5 class="card-title">Clicky Game</h5>
+                    <p class="card-text">A game where you try to select every picture once.  If you click the same picture twice you lose.
+                        Built with React and React-Bootstrap
+                    </p>
+                    <div class="button-row row">
+                        <a href="https://thomasdylan.github.io/Clicky-Game/" target="_blank"
+                            class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/Clicky-Game" target="_blank"
+                            class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
                 <img src="assets/images/friendFinder.png" class="card-img-top" alt="Friend Finder">
                 <div class="card-body">
                     <h5 class="card-title">Friend Finder</h5>
