--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,22 @@
 
     <div class="container col-10 mt-2 mb-6">
         <div class="row card-row col-12">
+
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/books.png" class="card-img-top" alt="Google Books">
+                <div class="card-body">
+                    <h5 class="card-title">Google Books</h5>
+                    <p class="card-text">Uses the Google Books API to find books.  Save books to display them on the saved page. 
+                        Books can be deleted after then have been saved.<br />
+                        Built using a MERN stack.
+                    </p>
+                    <div class="button-row row">
+                        <a href="https://google-books-dt.herokuapp.com/" target="_blank" class="btn btn-primary">Site</a>
+                        <a href="https://github.com/thomasdylan/GoogleBooks" target="_blank" class="btn btn-primary">Code</a>
+                    </div>
+                </div>
+            </div>
+
             <div class="card" style="width: 18rem;">
                 <img src="assets/images/hardTimeScraper.png" class="card-img-top" alt="Hard Times">
                 <div class="card-body">
