Changed brand statement

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
                     life. Recently graduated with a certificate in Full Stack Web Development from the University of
                     Utah and proficient in Javascript, Node.js, React, MySQL, HTML, CSS and more. Looking to join a team
                     where I can have a positive impact while learning new skills and continuing to develop the skills I
-                    already have. I have experience working with a team to develop apps that focus on UX with a personal
-                    focus on backend development and user authentication with JWT, passport and express sessions. With
-                    experience developing applications and an educational foundation from the University of Utah I will
-                    be a great asset as a full stack developer in this fast growing and exciting field.</p>
+                    already have. I have experience working with a team of four developers creating an app that was used
+                    to help users find the best rest stops while traveling that focus on UX with a personal focus on
+                    backend development and user authentication with JWT, passport and express sessions. I also
+                    developed a single page MERN app with one other developer for users to plan their savings or track
+                    progress towards big purchases and vacations. With experience developing applications in a six month
+                    bootcamp at the University of Utah as well as developing my own applications using a MERN stack I
+                    will be a great asset as a full stack developer in this fast growing and exciting field.</p>
             </div>
             <div class="col pl-5 pr-0">
                 <h1>Contact</h1>
