--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             class="fab fa-github fa-lg"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank"><i
+                    <a class="nav-link" href="http://www.linkedin.com/in/dylanthomas76/" target="_blank"><i
                             class="fab fa-linkedin fa-lg"></i></a>
                 </li>
             </ul>
@@ -73,7 +73,7 @@
                 <p><a href="tel:801-891-7276"><i class="fas fa-phone"></i> 801-891-7276</a></p>
                 <p><a href="https://github.com/thomasdylan" target="_blank"><i class="fab fa-github fa-lg"></i>
                         Github</a></p>
-                <p><a href="https://www.linkedin.com/in/dylan-thomas-39153b188/" target="_blank"><i
+                <p><a href="www.linkedin.com/in/dylanthomas76/" target="_blank"><i
                             class="fab fa-linkedin fa-lg"></i> LinkedIn</a></p>
                 <p><a href="assets/files/Resume.pdf" target="_blank"><i class="far fa-file"></i> Resume</a>
                 </p>
