--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <a href="index.html"><img class="profile-image" src="assets/images/profile-picture.png" alt="Profile Picture"></a>
                 <h1 class="display-4">Dylan Thomas</h1>
-                <p class="lead">Current student of the University of Utah coding bootcamp</p>
+                <p class="lead">Graduate of the University of Utah coding bootcamp</p>
             </div>
         </div>
 
