Added link to updated resume.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         Github</a></p>
                 <p><a href="www.linkedin.com/in/dylanthomas76/" target="_blank"><i
                             class="fab fa-linkedin fa-lg"></i> LinkedIn</a></p>
-                <p><a href="assets/files/Resume.pdf" target="_blank"><i class="far fa-file"></i> Resume</a>
+                <p><a href="assets/files/ResumeUpdated.pdf" target="_blank"><i class="far fa-file"></i> Resume</a>
                 </p>
             </div>
         </div>
